Update Admin Data and Admin dashboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.2.0
   dio: ^5.3.3
   flutter_dotenv: ^5.0.2
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
