--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   dio: ^5.3.3
   flutter_dotenv: ^5.0.2
   fl_chart: ^0.66.2
+  flutter_svg: ^2.0.9
+  flutter_floating_bottom_bar: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +36,12 @@ flutter:
 
   assets: 
     - assets/images/pp.jpeg                    
-    - assets/images/
+    - assets/images/murid.webp
+    - assets/images/guru.webp
+    - assets/images/ino.webp
+    - assets/images/login_background.webp
+    - assets/images/login_background.png
+    - assets/images/smkn2.webp
     - assets/icons/
     - assets/logos/
     - assets/animations/
