--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fl_chart: ^0.66.2
   flutter_svg: ^2.0.9
   flutter_floating_bottom_bar: ^1.3.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
