--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_floating_bottom_bar: ^1.3.0
   intl: ^0.20.2
+  web_socket_channel: ^2.4.0
 
 
 dev_dependencies:
